# estudos_Django

./: README.md  pyproject.toml
setup/: settings.py
