[tool.poetry]
name = "alura-space"
version = "0.1.0"
description = ""
authors = ["Otavio"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytz = "*"
django = "~4.2.6"
python-decouple = "^3.8"
dj-database-url = "~2.1.0"
psycopg2-binary = "^2.9.9"
django-bootstrap5 = "^23.3"
python-dateutil = "^2.8.2"
gunicorn = "^21.2.0"
django-vectortiles = "^0.2.0"
openpyxl = "^3.1.2"
shapely = "^2.0.3"
pyproj = "^3.6.1"
mgrs = "^1.4.6"
regex = "^2024.5.15"
fiona = "^1.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
